# inkscape-wps

./: .gitignore  AI_PROMPTS.md  CODE_IMPROVEMENTS.md  DEVELOPMENT.md  FRAMEWORK_SETUP_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING_CHECKLIST.md  SPEC.md  UPDATE_PLAN.md  VERIFICATION_REPORT.md  cursor_mac_id_modifier.sh  pyproject.toml  pyproject_analyzer.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_font_service_fix.py
.github/workflows/: verify.yml
code_review_analyzer/: README.md  __init__.py  __main__.py  analyzer_coordinator.py  cache_manager.py  cli.py  models.py  performance_monitor.py
code_review_analyzer/analyzers/: __init__.py  ast_utils.py  (+7 more)
inkscape_wps/: __init__.py  __main__.py
inkscape_wps.egg-info/: SOURCES.txt  requires.txt  top_level.txt
logs/: .3936826383d72204aa9c873be944a15c664c2121-audit.json  verify-report.json
packaging/: inkscape_wps.spec
tests/: __init__.py  conftest.py  test_ast_utils.py  test_base_analyzer.py  test_base_reporter.py  test_code_quality_analyzer.py  test_config_io.py  test_coordinate_transform.py  test_dependency_analyzer.py  test_design_issue_analyzer.py  test_document_bridge_strike_pyqt5.py  test_document_export_service.py  test_document_file_service.py  test_end_to_end_analysis.py  test_entry_and_fluent_regressions.py  test_file_flow_text.py  test_font_editor_dialog.py  test_font_manager_dialog.py  test_font_service.py  test_gcode.py  test_grbl_streaming.py  test_hershey_merge.py  test_kuixiang_font.py  test_machine_monitor.py  test_markdown_io.py  test_math_symbols.py  test_models.py  test_office_export_errors.py  test_office_xlsx_dims.py  test_orphaned_code_analyzer.py  test_presentation_editor_pyqt5.py  test_project_io.py  test_project_io_plaintext_compat.py  test_report_generator.py  test_requirements_verification.py  test_runtime_crash_analyzer.py  test_services_regressions.py  test_stroke_layout.py  test_stroke_text_model.py  test_svg_import.py  (+3 more)
tools/: download_single_line_fonts.sh  generate_hershey_jhf_maps.py  verify.py
(+78 files in other folders)
