[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inkscape-wps"
version = "0.1.0"
description = "类 WPS 体验的 GRBL 写字机上位机（文字/表格/演示、单线字库、工程与 G-code）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "PyQt5>=5.15.9",
    "PyQt-Fluent-Widgets>=1.11.0",
    "pyserial>=3.5",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "markdown>=3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["inkscape_wps*"]

[tool.setuptools.package-data]
inkscape_wps = ["data/**/*"]
