[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "inkscape-wps"
version = "0.1.0"
description = "类 WPS 体验的 GRBL 写字机上位机（文字/表格/演示、单线字库、工程与 G-code）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.9",
    "PyQt-Fluent-Widgets>=1.11.0",
    "pyserial>=3.5",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "Pillow>=10.0.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
classic-ui = [
    "PyQt6>=6.5.0",
]
office = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["inkscape_wps*"]

[tool.setuptools.package-data]
inkscape_wps = ["data/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    ".venv310",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
files = [
    "tools/verify.py",
    "inkscape_wps/ui/file_flow_text.py",
    "tests/test_file_flow_text.py",
]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
pretty = true
